v1.4 - Jun 23, 2012
* updated build system to maven (easier for others to contribute)

v1.3 - Mar 3, 2012
* merged dogbig's pull request for Ultraban support

v1.2 - Feb 18, 2012
* updated to latest Bukkit-1.1-R4 (RB #1938)
* updated to new style Bukkit configuration
* updated to new Bukkit event system
* updated to modern Permission system, borrowed from my HSP plugin. Leverages
Vault, WorldEdit, superperms, etc. It works out of the box, but if you want to
do configuration as an admin, see documentation: http://goo.gl/TErPh
* code cleanup: removed all System.out calls in favor of log.info

v1.1 - Dec 3, 2011
- added support for "/hp region" to record a WE region as a Honeypot. This
is NOT intended as a WorldGuard replacement, use sparingly and intelligently.

v1.0.3 - Nov 2, 2011
- added support for "globalBan: true" option in config.yml to support McBans3
automatic global bans - note this is ONLY supported for config.yml and
McBans3 (don't try with old-style honeypot.properties or McBans2)

v1.0.2 - Oct 30, 2011
- added support for latest CB (#1368+)

v1.0.1 - Sept 10, 2011
- fixed MCBans3 support to report finding it correctly (it was finding and
using it before, but was falsely reporting Vanilla on startup)

v1.0 - Sept 5, 2011
- initial (untested) MCBans3 support
- added a timer related to the "offenseCount" code - if offenseCount is > 1
and someone trips a Honeypot block but doesn't exceed the offenseCount, the
code will reset the broken Honeypot blocks within 5 minutes of that player
logging out.
- added support for standard Bukkit config.yml file. If you have an existing
old-style .properties file, Honeypot will still use that. If you don't, it
will create and prefer a new-style Bukkit config.yml instead.
- added support for "ban points", an advanced form of the offenseCount
algorithm. Read documentation for more details. This feature is ONLY supported
in new config.yml config syntax.