@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Sat Jun 23 10:20:52 PDT 2012
-build.number=4
+#Sat Jun 23 10:55:57 PDT 2012
+build.number=7
